k8s/overlays/staging/rollout-frontend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/id377585/agnetz-ia-frontend:v0.1.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
  strategy:
    canary:
      stableService: frontend
      canaryService: frontend-canary
      steps:
        - setWeight: 20
        - pause:
            duration: 60s
        - analysis:
            templates:
              - templateName: frontend-smoke
        - setWeight: 50
        - pause:
            duration: 120s
        - setWeight: 100
