k8s/overlays/staging/frontend-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
